--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Displayer</title>
-    <!-- <link rel="stylesheet" href="src/styles/global.css"> -->
+    <link rel="stylesheet" href="/src/styles//reset.css">
+    <link rel="stylesheet" href="/src/styles/style.css">
 </head>
 <body>
     <div id="app"></div>
