--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/src/styles/style.css">
 </head>
 <body>
-    <div id="app"></div>
+    <div id="app" class = "app"></div>
     <script type="module" src="dist/index.js"></script>
 </body>
 </html>
